--- a/code/workshop.ipynb
+++ b/code/workshop.ipynb
@@ -1,8 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Setting up the environment\n",
     "!git clone https://github.com/Rualito/KAT-RSP-Workshop2023\n",
@@ -35,9 +37,7 @@
     "from rsp.core.experiment import AtomSystem, ExperimentSetup\n",
     "\n",
     "# Loading experimental settings\n",
-    "# exp = ExperimentSetup.fromFile('/content/KAT-RSP-Workshop2023/code/hardware_config.json') # on colab\n",
-    "\n",
-    "exp = ExperimentSetup.fromFile('hardware_config.json') # local\n",
+    "exp = ExperimentSetup.fromFile('/content/KAT-RSP-Workshop2023/code/hardware_config.json') # on colab\n",
     "\n",
     "# Initializing the atom system\n",
     "lattice_unit = 3e-6\n",
@@ -83,7 +83,8 @@
     "# pulses can be added to the sequence using the pulse shape,\n",
     "# the transition channel and the target of the pulse \n",
     "pulseX.add_pulse(pulse=const_amplitude('01', 6*np.pi), \n",
-    "                 channel='clock', target=0)\n"
+    "                 channel='clock', target=0)\n",
+    "pulseX._compile_pulses(1e-9)"
    ]
   },
   {
@@ -462,7 +463,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far we have looked into single qubit rotations on a single atom. Things become more fun with more atoms! \n",
+    "So far we have looked into single qubit rotations on a single atom. \n",
+    "\n",
+    "Things become more fun with more atoms! \n",
     "\n",
     "Lets add one more and see which operations we can do"
    ]
@@ -647,7 +650,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The CNOT gate is widely used in quantum circuits to entangle qubits. It works as follow: If the control qubit is $|0\\rangle$ then nothing happens to the target qubit. If the control qubit is $|1\\rangle$, then the target qubit is fliped with an $X$ gate. \n",
+    "The CNOT gate is widely used in quantum circuits to entangle qubits. \n",
+    "\n",
+    "It works as follows: \n",
+    " - If the control qubit is $|0\\rangle$, then nothing happens to the target qubit. \n",
+    " - If the control qubit is $|1\\rangle$, then the target qubit is fliped with an $X$ gate. \n",
     "\n",
     "For instance\n",
     "\n",
@@ -749,7 +756,8 @@
     "from rsp.core.simulation import Simulator\n",
     "\n",
     "\n",
-    "exp = ExperimentSetup.fromFile('hardware_config.json')\n",
+    "exp = ExperimentSetup.fromFile('/content/KAT-RSP-Workshop2023/code/hardware_config.json') # on colab\n",
+    "\n",
     "gd = GateDictionary(exp)\n",
     "\n",
     "# Loading a gate dictionary into the quantum circuit\n",
@@ -794,10 +802,10 @@
     "Defining the quantum teleportation circuit. \n",
     "1. Entangling A and B\n",
     "2. Move B far away\n",
-    "3. Prepare some custom state on atom T: $\\ket{\\psi}_T=R_z(\\phi)R_x(\\theta)\\ket{0}_T$\n",
+    "3. Prepare some custom state on atom T: $|\\psi\\rangle_T=R_z(\\phi)R_x(\\theta)|0\\rangle_T$\n",
     "4. Couple T to A and prepare for measurement\n",
     "5. Measure atoms A and T; load measurement results into variables $m_A$ and $m_T$\n",
-    "6. Execute X/Z gates on B depending on the measurement results to recover state on atom B $\\ket{\\psi}_B$ \n",
+    "6. Execute X/Z gates on B depending on the measurement results to recover state on atom B $|\\psi\\rangle_B$ \n",
     "7. Invert state creation circuit $(R_z(\\phi)R_x(\\theta))^\\dagger=R_x(-\\theta)R_z(-\\phi)$. \n",
     "\n",
     "If the state on B ends up $\\ket{0}$, the teleportation protocol is successful!\n"
@@ -883,7 +891,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizing the circuit through $\\LaTeX$"
+    "Visualizing the circuit through $\\LaTeX$\n",
+    "\n",
+    "(need to install latex packages)"
    ]
   },
   {
