--- a/code/workshop.ipynb
+++ b/code/workshop.ipynb
@@ -327,16 +327,14 @@
     "gateSX = PulsedGate() # sqrt of X\n",
     "gateSX.new_channel('clock', ('0', '1'))\n",
     "# Start of gate SX\n",
-    "gateSX.add_pulse(pulse=const_amplitude('01', 1/2*np.pi), \n",
-    "                 channel='clock', target=0) # solution: remove for workshop\n",
+    "\n",
     "# end of gate SX\n",
     "\n",
     "\n",
     "gateZ = PulsedGate()\n",
     "gateZ.new_channel('clock', ('0', '1'))\n",
     "# Start of gate Z01\n",
-    "gateZ.add_pulse(pulse=const_amplitude('01', 0, np.pi), \n",
-    "                channel='clock', target=0)# solution: remove for workshop\n",
+    "\n",
     "# end of gate Z01\n",
     "\n",
     "\n",
@@ -351,16 +349,14 @@
     "gateT = PulsedGate() # sqrt of S\n",
     "gateT.new_channel('clock', ('0', '1'))\n",
     "# Start of gate S\n",
-    "gateT.add_pulse(pulse=const_amplitude('01', 0, 1/4*np.pi), \n",
-    "                channel='clock', target=0) # solution: remove for workshop\n",
+    "\n",
     "# end of gate S\n",
     "\n",
     "\n",
     "gateX1r = PulsedGate()\n",
     "gateX1r.new_channel('ryd', ('1', 'r'))\n",
     "# Start of gate X1r\n",
-    "gateX1r.add_pulse(pulse=const_amplitude('1r', np.pi), \n",
-    "                  channel='ryd', target=0) # solution: remove for workshop\n",
+    "\n",
     "# end of gate X1r"
    ]
   },
@@ -573,6 +569,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "gateRy = PulsedGate()\n",
+    "gateRy.new_channel('clock', ('0', '1'))\n",
+    "gateRy.new_channel('ryd', ('1', 'r'))\n",
+    "\n",
+    "gateRy.add_pulse(const_amplitude('1r', np.pi), \n",
+    "                 'ryd', target=0)\n",
+    "gateRy.shift_pulses(-gateRy.max_time)\n",
+    "\n",
+    "gateRy.add_pulse(const_amplitude('1r', 2*np.pi), \n",
+    "                 'ryd', target=1)\n",
+    "gateRy.shift_pulses(-gateRy.max_time)\n",
+    "\n",
+    "gateRy.add_pulse(const_amplitude('1r', np.pi), \n",
+    "                 'ryd', target=0)\n",
+    "gateRy.shift_pulses(-gateRy.max_time)\n",
+    "\n",
+    "qc.add_to_dictionary(gateRy, 'Ry')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -627,15 +649,14 @@
     "qc.add_operation('H', ['A']) # 0 -> +\n",
     "qc.add_operation('H', ['B']) # 0 -> +\n",
     "\n",
-    "# qc.add_operation('CZ', ['A', 'B']) # solution: remove for workshop\n",
-    "\n",
     "# Single qubit gates before\n",
-    "qc.add_operation('X', ['A'])# solution: remove for workshop\n",
-    "qc.add_operation('X', ['B'])# solution: remove for workshop\n",
+    "\n",
+    "\n",
     "qc.add_operation('Ry', ['A', 'B'])\n",
     "# Single qubit gates after\n",
-    "qc.add_operation('X', ['A'])# solution: remove for workshop\n",
-    "qc.add_operation('X', ['B'])# solution: remove for workshop\n",
+    "\n",
+    "\n",
+    "# end of single qubit gates\n",
     "\n",
     "sim = Simulator(exp, atomsys)\n",
     "\n",
