--- a/presentation/slides.ipynb
+++ b/presentation/slides.ipynb
@@ -23,9 +23,158 @@
    "source": [
     "$~$\n",
     "\n",
+    "- Purpose of the simulation platform\n",
     "- The physics of Rydberg atoms\n",
     "- From laser pulses to quantum gates\n",
     "- Example: Quantum State Teleportation protocol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KAT1 Full stack\n",
+    "\n",
+    "(img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# RSP - Rydberg Simulation Platform\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "You come up with some quantum algorithm, and you want to understand how well it runs on the quantum computer. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "You could be testing the algorithm against noise, or trying to fine tune the algorithm to achieve a quantum advantage. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "The results from the quantum computer itself are not that easy to understand and debug, and so you resort to a simulation of the hardware, where you can tune different noise settings and access the full quantum state.   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Quantum systems are naturally hard to simulate, and so you cannot use the classical simulation to get the results for the full scale algorithm. Still, some insight is better than no insight..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The Rydberg Simulation Platform `RSP`, was built towards that purpose."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "With it, a user can set experimental parameters, different noise configurations and fully customise the shapes of laser pulses. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "`RSP` is quite versatile, and is currently capable of\n",
+    "* __Customizable `Measurement`__ operations\n",
+    "* Simulation of __transport of atoms__ with laser tweezers via `AtomTransport`\n",
+    "* Versatile __pulse sequence construction__ with `PulsedGate` \n",
+    "* Physics accurate __gate caching__ for fast execution \n",
+    "* __Circuit variables__ and __parametrized gates__ for the simulation of __dynamical circuits__ and mid-circuit measurements\n",
+    "* Full evolution with __state decay__ and __anti-trapping__ \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## RSP full stack\n",
+    "\n",
+    "<img src=\"rsp.png\" width=\"400\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "These features are under construction and are to be available soon\n",
+    " * Evolution with finite temperature through customizable motional state energy\n",
+    " * Gate caching in noisy evolution settings   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "These features are planned in a longer term vision\n",
+    "* Simulation with Tensor Networks to efficiently simulate large systems\n",
+    "* Message Passing Interface (MPI) to run in large computing clusters\n",
+    "* Full system integration : \n",
+    "    * Translation layer with QuA \n",
+    "    * Quantum Inspire API\n",
+    "* Quantum circuit transpilation "
    ]
   },
   {
@@ -69,7 +218,7 @@
     }
    },
    "source": [
-    "## Rydberg atoms are shy"
+    "## Rydberg atoms are grabby"
    ]
   },
   {
@@ -80,7 +229,7 @@
     }
    },
    "source": [
-    "## Rydberg atoms are shy\n",
+    "## Rydberg atoms are grabby\n",
     "\n",
     "Two nearby atoms in the Rydberg level interact strongly\n",
     "$V=-C_6/R^6$\n",
@@ -114,17 +263,11 @@
     "\n",
     "Install rsp and dependecies directly with pip \n",
     "\n",
-    "> `pip install git+https://gitlab.tue.nl/20235021/rsp.git`\n",
+    "`pip install git+https://gitlab.tue.nl/20235021/rsp.git`\n",
     "\n",
     "Visualization utilities: \n",
     "    \n",
-    "> `pip install rsp[utils]`\n",
-    "    \n",
-    "> `pip install mayavi`\n",
-    "\n",
-    "To run jupyter notebooks\n",
-    "\n",
-    "> `pip install jupyter`\n",
+    "`pip install rsp[utils]`\n",
     "\n",
     "$~$\n"
    ]
@@ -170,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -182,19 +325,12 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook slides.ipynb to slides\n",
-      "[NbConvertApp] Writing 275049 bytes to slides.slides.html\n",
+      "[NbConvertApp] WARNING | Alternative text is missing on 1 image(s).\n",
+      "[NbConvertApp] Writing 282981 bytes to slides.slides.html\n",
       "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0\n",
       "Serving your slides at http://127.0.0.1:8000/slides.slides.html\n",
       "Use Control-C to stop this server\n",
-      "404 GET /favicon.ico (127.0.0.1) 2.30ms\n",
-      "tcgetpgrp failed: Not a tty\n",
-      "start : This command cannot be run due to the error: The system cannot find the file specified.\n",
-      "At line:1 char:1\n",
-      "+ start http?\\127.0.0.1?8000\\slides.slides.html\n",
-      "+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "    + CategoryInfo          : InvalidOperation: (:) [Start-Process], InvalidOperationException\n",
-      "    + FullyQualifiedErrorId : InvalidOperationException,Microsoft.PowerShell.Commands.StartProcessCommand\n",
-      " \n",
+      "404 GET /favicon.ico (127.0.0.1) 0.57ms\n",
       "^C\n",
       "\n",
       "Interrupted\n"
