--- a/presentation/slides.ipynb
+++ b/presentation/slides.ipynb
@@ -198,16 +198,12 @@
    "source": [
     "## How lasers drive transitions\n",
     "\n",
-    "(Atomic level structure)\n",
-    "(laser with frequency $\\omega = \\omega_{01}-\\Delta$)\n",
-    "(The rabi frequency scales with $\\sqrt{I_{laser}} $)\n",
     "\n",
-    "$H_{01} = \\Omega ( |0\\rangle\\langle 1| + |1\\rangle\\langle 0| ) + \\Delta |1\\rangle\\langle 1|$\n",
+    "<img src=\"atom levels.png\" width=\"400\"/>  \n",
     "\n",
-    "$H_{1r} = \\Omega ( |1\\rangle\\langle r| + |r\\rangle\\langle 1| ) + \\Delta |r\\rangle\\langle r|$\n",
+    "Lasers drive transitions when in resonance. \n",
     "\n",
-    "\n",
-    "(insert image)"
+    "The Rabi frequency $\\Omega$ determines how fast the transition occurs, and $\\Delta$ is an energy shift from resonance"
    ]
   },
   {
@@ -231,18 +227,15 @@
    "source": [
     "## Rydberg atoms are grabby\n",
     "\n",
-    "Two nearby atoms in the Rydberg level interact strongly\n",
-    "$V=-C_6/R^6$\n",
+    "<img src=\"grabby rydberg.png\" width=\"400\"/>  \n",
     "\n",
     "$H_{r,r} = V |rr\\rangle\\langle rr|$\n",
     "\n",
-    "With a distance of $3\\mu m$, the interaction strength $V=261\\,MHz$ (${}^{88}Sr, n=61$)\n",
+    "$R = 3\\mu m \\rightarrow V=261\\,MHz$ (${}^{88}Sr, n=61$)\n",
     "\n",
     "With standard experimental parameters, the rabi frequency $\\Omega_{1r}=10.5\\, MHz$ (intensity of $25 MW/m^2$)\n",
     "\n",
-    "(image: interaction atoms r-r, transition 1-r)\n",
-    "\n",
-    "If one nearby atom is in the Rydberg state, then the laser is not able to drive the transition, as is too far detuned. (matrix, eigenvalues? level shift graph)\n",
+    "If one nearby atom is in the Rydberg state, then the laser is not able to drive the transition, as is too far detuned. \n",
     "\n",
     "One can prepare an atomic state in a superposition $(|1\\rangle + |r\\rangle)/\\sqrt{2}$ and thus create quantum correlations between atoms"
    ]
@@ -313,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -325,15 +318,11 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook slides.ipynb to slides\n",
-      "[NbConvertApp] WARNING | Alternative text is missing on 1 image(s).\n",
-      "[NbConvertApp] Writing 282981 bytes to slides.slides.html\n",
+      "[NbConvertApp] WARNING | Alternative text is missing on 2 image(s).\n",
+      "[NbConvertApp] Writing 282723 bytes to slides.slides.html\n",
       "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0\n",
       "Serving your slides at http://127.0.0.1:8000/slides.slides.html\n",
-      "Use Control-C to stop this server\n",
-      "404 GET /favicon.ico (127.0.0.1) 0.57ms\n",
-      "^C\n",
-      "\n",
-      "Interrupted\n"
+      "Use Control-C to stop this server\n"
      ]
     }
    ],
