updates to workshop

--- a/presentation/slides.ipynb
+++ b/presentation/slides.ipynb
@@ -235,9 +235,7 @@
     "\n",
     "With standard experimental parameters, the rabi frequency $\\Omega_{1r}=10.5\\, MHz$ (intensity of $25 MW/m^2$)\n",
     "\n",
-    "If one nearby atom is in the Rydberg state, then the laser is not able to drive the transition, as is too far detuned. \n",
-    "\n",
-    "One can prepare an atomic state in a superposition $(|1\\rangle + |r\\rangle)/\\sqrt{2}$ and thus create quantum correlations between atoms"
+    "If one nearby atom is in the Rydberg state, then the laser is not able to drive the transition, as is too far detuned . "
    ]
   },
   {
@@ -306,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -318,11 +316,14 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook slides.ipynb to slides\n",
-      "[NbConvertApp] WARNING | Alternative text is missing on 2 image(s).\n",
-      "[NbConvertApp] Writing 282723 bytes to slides.slides.html\n",
+      "[NbConvertApp] WARNING | Alternative text is missing on 3 image(s).\n",
+      "[NbConvertApp] Writing 282659 bytes to slides.slides.html\n",
       "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0\n",
       "Serving your slides at http://127.0.0.1:8000/slides.slides.html\n",
-      "Use Control-C to stop this server\n"
+      "Use Control-C to stop this server\n",
+      "^C\n",
+      "\n",
+      "Interrupted\n"
      ]
     }
    ],
