updates to workshop - clarity

--- a/presentation/slides.ipynb
+++ b/presentation/slides.ipynb
@@ -23,15 +23,19 @@
    "source": [
     "$~$\n",
     "\n",
-    "- Purpose of the simulation platform\n",
-    "- The physics of Rydberg atoms\n",
-    "- From laser pulses to quantum gates\n",
-    "- Example: Quantum State Teleportation protocol"
+    "1. Purpose of the simulation platform\n",
+    "2. The physics of Rydberg atoms\n",
+    "3. From laser pulses to quantum gates\n",
+    "4. Example: Quantum State Teleportation protocol"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "## KAT1 Full stack\n",
     "\n",
@@ -304,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -321,6 +325,14 @@
       "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0\n",
       "Serving your slides at http://127.0.0.1:8000/slides.slides.html\n",
       "Use Control-C to stop this server\n",
+      "tcgetpgrp failed: Not a tty\n",
+      "start : This command cannot be run due to the error: The system cannot find the file specified.\n",
+      "At line:1 char:1\n",
+      "+ start http?\\127.0.0.1?8000\\slides.slides.html\n",
+      "+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "    + CategoryInfo          : InvalidOperation: (:) [Start-Process], InvalidOperationException\n",
+      "    + FullyQualifiedErrorId : InvalidOperationException,Microsoft.PowerShell.Commands.StartProcessCommand\n",
+      " \n",
       "^C\n",
       "\n",
       "Interrupted\n"
