--- a/presentation/slides.ipynb
+++ b/presentation/slides.ipynb
@@ -321,7 +321,7 @@
      "text": [
       "[NbConvertApp] Converting notebook slides.ipynb to slides\n",
       "[NbConvertApp] WARNING | Alternative text is missing on 3 image(s).\n",
-      "[NbConvertApp] Writing 282659 bytes to slides.slides.html\n",
+      "[NbConvertApp] Writing 282689 bytes to slides.slides.html\n",
       "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0\n",
       "Serving your slides at http://127.0.0.1:8000/slides.slides.html\n",
       "Use Control-C to stop this server\n",
@@ -333,9 +333,7 @@
       "    + CategoryInfo          : InvalidOperation: (:) [Start-Process], InvalidOperationException\n",
       "    + FullyQualifiedErrorId : InvalidOperationException,Microsoft.PowerShell.Commands.StartProcessCommand\n",
       " \n",
-      "^C\n",
-      "\n",
-      "Interrupted\n"
+      "404 GET /favicon.ico (127.0.0.1) 11.38ms\n"
      ]
     }
    ],
