Gif animation added to workshop

--- a/presentation/slides.ipynb
+++ b/presentation/slides.ipynb
@@ -333,7 +333,10 @@
       "    + CategoryInfo          : InvalidOperation: (:) [Start-Process], InvalidOperationException\n",
       "    + FullyQualifiedErrorId : InvalidOperationException,Microsoft.PowerShell.Commands.StartProcessCommand\n",
       " \n",
-      "404 GET /favicon.ico (127.0.0.1) 11.38ms\n"
+      "404 GET /favicon.ico (127.0.0.1) 11.38ms\n",
+      "^C\n",
+      "\n",
+      "Interrupted\n"
      ]
     }
    ],
