Choice of directory possible

--- a/code/workshop.ipynb
+++ b/code/workshop.ipynb
@@ -33,12 +33,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# directory_prepend = '' # uncomment if ran locally\n",
+    "\n",
+    "directory_prepend = '/content/KAT-RSP-Workshop2023/code/' # uncomment this if ran on google colab\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "\n",
     "from rsp.core.experiment import AtomSystem, ExperimentSetup\n",
-    "\n",
-    "directory_prepend = '' # uncomment if ran locally\n",
-    "# directory_prepend = '/content/KAT-RSP-Workshop2023/code/' # uncomment this if ran on google colab\n",
     "\n",
     "# Loading experimental settings\n",
     "exp = ExperimentSetup.fromFile(directory_prepend+'hardware_config.json')\n",
@@ -768,7 +776,7 @@
     "\n",
     "After the $Ryd$ operation, the single qubit rotations have to be inversed\n",
     "\n",
-    "How can we get the CZ gate with Ry? Some single qubit gates have to be added, can you guess which? \n"
+    "How can we get the CZ gate with $Ryd$? Some single qubit gates have to be added, can you guess which? \n"
    ]
   },
   {
@@ -789,7 +797,7 @@
     "qc.add_operation(gateNameA, ['A']) \n",
     "qc.add_operation(gateNameB, ['B']) \n",
     "\n",
-    "qc.add_operation('Ry', ['A', 'B'])\n",
+    "qc.add_operation('Ryd', ['A', 'B'])\n",
     "# Single qubit gates after\n",
     "\n",
     "qc.add_operation(gateNameB, ['B']) \n",
@@ -915,7 +923,7 @@
     "from rsp.core.simulation import Simulator\n",
     "\n",
     "\n",
-    "exp = ExperimentSetup.fromFile('/content/KAT-RSP-Workshop2023/code/hardware_config.json') # on colab\n",
+    "exp = ExperimentSetup.fromFile(directory_prepend+'hardware_config.json') # on colab\n",
     "\n",
     "gd = GateDictionary(exp)\n",
     "\n",
