fixed detuning sign

--- a/code/workshop.ipynb
+++ b/code/workshop.ipynb
@@ -84,7 +84,7 @@
     "    rabi_freq = exp.rabi_freq[{'01':('0','1'), '1r':('1','r')}[transition]]\n",
     "    duration = int(1/rabi_freq * 1e9)\n",
     "    amp_wf = ConstantWaveform(duration, amplitude)\n",
-    "    det_wf = ConstantWaveform(duration, -detuning)\n",
+    "    det_wf = ConstantWaveform(duration, detuning)\n",
     "    \n",
     "    return Pulse(amplitude=amp_wf, detuning=det_wf, phase=0)\n",
     "\n",
