Teleportation fidelity with right expression

--- a/code/workshop.ipynb
+++ b/code/workshop.ipynb
@@ -465,7 +465,8 @@
     "# Start of gate Z01\n",
     "\n",
     "# end of gate Z01\n",
-    "show_pulse_on_bloch(gateZ)"
+    "ket_plus = (ket('0', 3) + ket('1', 3))/np.sqrt(2)\n",
+    "show_pulse_on_bloch(gateZ, starting_state=ket_plus)"
    ]
   },
   {
@@ -492,9 +493,9 @@
    "source": [
     "gateT = PulsedGate() # sqrt of S\n",
     "gateT.new_channel('clock', ('0', '1'))\n",
-    "# Start of gate S\n",
+    "# Start of gate T\n",
     "\n",
-    "# end of gate S\n",
+    "# end of gate T\n",
     "ket_plus = (ket('0', 3) + ket('1', 3))/np.sqrt(2)\n",
     "show_pulse_on_bloch(gateT, starting_state=ket_plus)"
    ]
@@ -1096,7 +1097,7 @@
     "\n",
     "sim.run_circuit(qc, save_states=True)\n",
     "\n",
-    "fid = np.abs(sim.psi.overlap(atomsys.ket(('B', '0'))))\n",
+    "fid = (atomsys.ket(('B', '0')).dag() * sim.psi).norm()\n",
     "print(f\"Teleportation fidelity: {fid}\")"
    ]
   },
@@ -1134,7 +1135,6 @@
     "                                            track_end_state=True,\n",
     "                                            runtime_caching=True)\n",
     "print(f\"Simulation took {timer()-start:.3} s\")\n",
-    "\n",
     "\n",
     "for mA, mT, state in zip(cvars['mA'], cvars['mT'], states):\n",
     "    overlap = (atomsys.ket(('B', '0')).dag() * state ).norm()\n",
